<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetalleEvento">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarHoySale"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/caracteristicas"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toStartOf="@+id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="45dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="31dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarHoySale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbarHoySale"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="191dp"
        android:layout_height="158dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarHoySale">

        <ImageView
            android:id="@+id/imagenEvento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/detalleEventoFoto"
            app:srcCompat="@drawable/evento" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="473dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/eventoDetalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/datosEvento" />

            <Button
                android:id="@+id/anotarme"
                android:layout_width="98dp"
                android:layout_height="38dp"
                android:layout_marginLeft="40sp"
                android:layout_weight="1"
                android:background="@color/botonVerde"
                android:text="@string/botonAnotarme"
                android:textColor="@color/letraBlanca" />

            <Button
                android:id="@+id/volver"
                android:layout_width="93dp"
                android:layout_height="36dp"
                android:layout_marginLeft="70sp"
                android:layout_weight="1"
                android:background="@color/botonVerde"
                android:text="@string/botonVolver"
                android:textColor="@color/letraBlanca" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/calendario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/fechaEvento"
                    app:srcCompat="@drawable/ic_perm_contact_calendar_black_24dp"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:id="@+id/fecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fechaEvento" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ubicacionfoto"
                    android:contentDescription="@string/ubicacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_place_black"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:id="@+id/ubicacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ubicacion" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/descripcionEvento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/descripcion"
                    app:srcCompat="@drawable/ic_description_black"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:id="@+id/descripcion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/descripcion" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>