<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".busquedaEventos">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarHoySale"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/caracteristicas"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toStartOf="@+id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="45dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="31dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarHoySale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbarHoySale"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/personas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="80dp"
        android:background="@color/busquedaEventos"
        android:text="@string/busquedaPersonas"
        android:textColor="@color/letraBlanca"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/otros"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarHoySale"
        app:layout_constraintVertical_bias="0.003" />

    <Button
        android:id="@+id/otros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="500dp"
        android:background="@color/busquedaEventos"
        android:text="@string/budquedaOtros"
        android:textColor="@color/letraBlanca"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarHoySale"
        app:layout_constraintVertical_bias="0.645" />

    <View
        android:id="@+id/division"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="180dp"
        android:layout_marginBottom="53dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/busquedaEvento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarHoySale"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/eventoReciente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="564dp"
        android:text="@string/eventoAgregado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.185"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarHoySale" />

    <ListView
        android:id="@+id/listviewbusqueda"
        android:layout_width="404dp"
        android:layout_height="493dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarHoySale"
        app:layout_constraintVertical_bias="0.784" />


</androidx.constraintlayout.widget.ConstraintLayout>